def allJvmArgs = ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += ["--enable-preview"]
}

tasks.withType(Test).configureEach {
  jvmArgs += allJvmArgs
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += allJvmArgs
}

java {
  sourceCompatibility = JavaVersion.VERSION_21
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

test {
  systemProperty("junit.jupiter.extensions.autodetection.enabled", true)
}